--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <p>To create AI-literate communities and inspire future innovators from rural and urban areas alike.</p>
     </div>
     <div class="about-card">
-      <img src="C:\Users\amitk\OneDrive\Desktop\pg-2\TEAM_ALPHA\images\IMG-20251225-WA0120 (1).jpg" alt="Team">
+      <img src="https://github.com/Amit75860/TeamAlpha" alt="Team">
       <h3>Our Team</h3>
       <p>A passionate team of students and researchers from SKBU, dedicated to spreading AI awareness and conducting impactful outreach programs.</p>
     </div>
@@ -313,4 +313,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
