--- a/index.html
+++ b/index.html
@@ -175,45 +175,52 @@
   </p>
 
   <div class="survey-gallery">
+        <div class="survey-card">
+      <div class="img-container">
+        <img src="images/team.jpeg" alt="AI survey interaction">
+        <div class="overlay">Community interaction & AI awareness discussion</div>
+      </div>
+      <p class="meta">📍 Mukutmonipur · 24 Dec 2025</p>
+    </div>
 
     <div class="survey-card">
       <div class="img-container">
-        <img src="C:\Users\amitk\OneDrive\Desktop\pg-2\TEAM_ALPHA\images\IMG-20251225-WA0120.jpg" alt="AI survey interaction">
+        <img src="images/IMG-20251225-WA0233.jpg" alt="AI survey interaction">
         <div class="overlay">Community interaction & AI awareness discussion</div>
       </div>
       <p class="meta">📍 Mukutmonipur · 24 Dec 2025</p>
     </div>
       <div class="survey-card">
       <div class="img-container">
-        <img src="C:\Users\amitk\OneDrive\Desktop\pg-2\TEAM_ALPHA\images\IMG-20251225-WA0254.jpg" alt="AI survey interaction">
+        <img src="images/IMG-20251225-WA0254.jpg" alt="AI survey interaction">
         <div class="overlay">Community interaction & AI awareness discussion</div>
       </div>
       <p class="meta">📍 Mukutmonipur · 24 Dec 2025</p>
     </div>
       <div class="survey-card">
       <div class="img-container">
-        <img src="C:\Users\amitk\OneDrive\Desktop\pg-2\TEAM_ALPHA\images\IMG-20260117-WA0001.jpg" alt="AI survey interaction">
+        <img src="images/IMG-20260117-WA0001.jpg" alt="AI survey interaction">
         <div class="overlay">Community interaction & AI awareness discussion</div>
       </div>
       <p class="meta">📍 Mukutmonipur · 24 Dec 2025</p>
     </div>
       <div class="survey-card">
       <div class="img-container">
-        <img src="C:\Users\amitk\OneDrive\Desktop\pg-2\TEAM_ALPHA\images\IMG-20251225-WA0233.jpg" alt="AI survey interaction">
+        <img src="images/WhatsApp Image 2026-01-18 at 8.01.47 AM.jpeg" alt="AI survey interaction">
         <div class="overlay">Community interaction & AI awareness discussion</div>
       </div>
       <p class="meta">📍 Mukutmonipur · 24 Dec 2025</p>
     </div>
       <div class="survey-card">
       <div class="img-container">
-        <img src="C:\Users\amitk\OneDrive\Desktop\pg-2\TEAM_ALPHA\images\IMG-20251225-WA0120.jpg" alt="AI survey interaction">
+        <img src="images/WhatsApp Image 2026-01-18 at 8.01.48 AM.jpeg" alt="AI survey interaction">
         <div class="overlay">Community interaction & AI awareness discussion</div>
       </div>
       <p class="meta">📍 Mukutmonipur · 24 Dec 2025</p>
     </div>
       <div class="survey-card">
       <div class="img-container">
-        <img src="C:\Users\amitk\OneDrive\Desktop\pg-2\TEAM_ALPHA\images\IMG-20251225-WA0174.jpg" alt="AI survey interaction">
+        <img src="images/WhatsApp Image 2026-01-18 at 8.01.55 AM.jpeg" alt="AI survey interaction">
         <div class="overlay">Community interaction & AI awareness discussion</div>
       </div>
       <p class="meta">📍 Mukutmonipur · 24 Dec 2025</p>
@@ -231,7 +238,7 @@
 
     <div class="survey-card">
       <div class="img-container">
-        <img src="C:\Users\amitk\OneDrive\Desktop\pg-2\TEAM_ALPHA\images\IMG-20251225-WA0138.jpg" alt="Group awareness program">
+        <img src="images/WhatsApp Image 2026-01-18 at 8.01.53 AM.jpeg" alt="Group awareness program">
         <div class="overlay">Group discussion on AI applications</div>
       </div>
       <p class="meta">📍 Mukutmonipur · 24 Dec 2025</p>
@@ -313,6 +320,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
